--- a/ui/package.json
+++ b/ui/package.json
@@ -9,33 +9,33 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "core-js": "^2.6.5",
-    "fhir": "^4.7.0",
-    "swagger-ui": "^3.22.1",
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.6",
-    "vuetify": "^1.5.5",
-    "vuex": "^3.1.0"
+    "axios": "0.*",
+    "core-js": "3.*",
+    "fhir": "4.*",
+    "swagger-ui": "^3.23.4",
+    "vue": "2.*",
+    "vue-router": "^3.0.7",
+    "vuetify": "2.*",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.6.0",
-    "@vue/cli-plugin-eslint": "^3.6.0",
-    "@vue/cli-plugin-unit-jest": "^3.6.0",
-    "@vue/cli-service": "^3.6.0",
-    "@vue/eslint-config-prettier": "^4.0.1",
+    "@vue/cli-plugin-babel": "^3.10.0",
+    "@vue/cli-plugin-eslint": "^3.10.0",
+    "@vue/cli-plugin-unit-jest": "^3.10.0",
+    "@vue/cli-service": "^3.10.0",
+    "@vue/eslint-config-prettier": "5.*",
     "@vue/test-utils": "1.0.0-beta.29",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.18.0",
-    "sass-loader": "^7.1.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "vue-cli-plugin-vuetify": "^0.5.0",
-    "vue-template-compiler": "^2.5.21",
-    "vuetify-loader": "^1.0.5"
+    "babel-core": "6.*",
+    "babel-eslint": "^10.0.2",
+    "babel-jest": "24.*",
+    "eslint": "6.*",
+    "eslint-plugin-vue": "^5.2.3",
+    "sass": "^1.22.9",
+    "sass-loader": "7.*",
+    "stylus": "0.*",
+    "stylus-loader": "3.*",
+    "vue-cli-plugin-vuetify": "^0.6.1",
+    "vue-template-compiler": "2.*",
+    "vuetify-loader": "^1.3.0"
   }
 }
