--- a/ihris-backend/package.json
+++ b/ihris-backend/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.17.1",
     "fhirpath": "^2.1.5",
     "is-empty": "^1.2.0",
+    "lodash": "^4.17.19",
     "marked": "^1.1.0",
     "morgan": "~1.9.1",
     "nconf": "^0.10.0",
